PLP heading tag and description truncation issue fixes (#202)
* PLP heading tag and description truncation issue fixes

* yarn start after merge

* PLP description truncation issue fixed for short descriptions

--- a/assets/announcement-bar.css
+++ b/assets/announcement-bar.css
@@ -83,14 +83,12 @@
   }
 }
 .announcement-bar__localization-form-item .value-picker {
-  height: 100% !important;
-}
-.announcement-bar__localization-form-item .value-picker {
   top: 30px;
   bottom: auto;
   bottom: initial;
   z-index: 6;
   color: #000;
+  height: 100% !important;
 }
 .announcement-bar__content {
   font-family: "poppins";
